<resources>
    <string name="app_name">ThinkWell AI</string>
    <string name="logo">logo</string>
    <string name="thinkwell_ai">ThinkWell.AI</string>
    <string name="sendbtn">sendBtn</string>
    <string name="don_t_have_account_sign_up"><html>Don\'t have account? <b>Sign Up</b></html></string>
    <string name="backbtn">backbtn</string>
    <string name="already_have_an_account_sign_in"><html>Already have an account? <b>Log in</b></html></string>
    <string name="email_instruction">Enter the email address associated with your account.</string>

    <string name="default_web_client_id">145486496385-9mdlq89fi5rqe821n03hr4had69dvmqm.apps.googleusercontent.com</string>
    <string name="addnotefab">addnotefab</string>
    <string name="blissbook">BlissBook</string>
    <string name="picture_fab">picture_fab</string>
    <string name="image">image</string>
    <string name="profile_picture">profile_picture</string>
    <string name="delete"><html><u>Delete note</u></html></string>
</resources>
