<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".activities.LogoutPage">

    <LinearLayout
        android:id="@+id/app_name_ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/thinkwell_ai_logo"
            android:contentDescription="@string/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/kufam"
            android:text="@string/thinkwell_ai"
            android:textColor="@color/logo_purple"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/back_btn_logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_below="@id/app_name_ll_logout"
        android:src="@drawable/baseline_keyboard_backspace_24"
        android:contentDescription="@string/backbtn" />

    <TextView
        android:id="@+id/logout_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/kufam"
        android:text="See you soon! "
        android:textColor="@color/logo_purple"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_base_image_logout_card"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_below="@id/logout_txt"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:cardCornerRadius="60.5dp"
        android:elevation="0dp"
        android:backgroundTint="@android:color/darker_gray">

        <ImageView
            android:id="@+id/profile_base_image_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile"
            android:contentDescription="profile_picture"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/logout_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_base_image_logout_card"
        android:layout_centerHorizontal="true"
        android:text="user_email@gmail.com"
        android:textSize="18dp"
        android:fontFamily="@font/kufam"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/main_logout_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/logout_email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="Logout"
        android:background="@color/logo_purple"
        android:textSize="20sp"/>



</RelativeLayout>