<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".activities.AddEditNote">

    <LinearLayout
        android:id="@+id/app_name_ll_add_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/thinkwell_ai_logo"
            android:contentDescription="@string/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/kufam"
            android:text="@string/thinkwell_ai"
            android:textColor="@color/logo_purple"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/back_btn_add_note"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_below="@id/app_name_ll_add_notes"
        android:src="@drawable/baseline_keyboard_backspace_24"
        android:contentDescription="@string/backbtn" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_name_ll_add_notes">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_note_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/kufam"
                android:textColor="@color/logo_purple"
                android:text="Add New Note!"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:elevation="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:id="@+id/note_title_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Title"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="20dp"
                    android:padding="20dp" />

                <EditText
                    android:id="@+id/note_content_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Content"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:padding="20dp"
                    android:minLines="10"
                    android:gravity="start"/>

            </LinearLayout>

            <Button
                android:id="@+id/insert_note_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                android:text="Save"
                android:textSize="16sp"
                android:padding="10dp"
                android:background="@color/logo_purple"
                android:elevation="5dp"/>

            <TextView
                android:id="@+id/delete_note_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete note"
                android:textColor="#9C0F0F"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/light_purple"
                android:visibility="gone"/>

        </LinearLayout>


    </ScrollView>





</RelativeLayout>