<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".activities.UserRegisterPage">

    <LinearLayout
        android:id="@+id/app_name_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/thinkwell_ai_logo"
            android:contentDescription="@string/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/kufam"
            android:text="@string/thinkwell_ai"
            android:textColor="@color/logo_purple"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/back_btn_reg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_below="@id/app_name_ll"
        android:src="@drawable/baseline_keyboard_backspace_24"
        android:contentDescription="@string/backbtn" />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_ll"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/kufam"
        android:text="New Account, New Possibilities!"
        android:textColor="@color/logo_purple"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/email_ll_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_social"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="3dp"
        android:layout_below="@id/welcome_txt">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_txt_reg"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/kufam"
            android:hint="Email"
            app:boxStrokeColor="@color/white"
            app:boxBackgroundMode="none"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pass_ll_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_social"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:layout_below="@id/email_ll_reg">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_txt_reg"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/kufam"
            android:hint="Password"
            app:boxStrokeColor="@color/white"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_pass_ll_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_social"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:paddingTop="2dp"
        android:layout_below="@id/pass_ll_reg">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_pass_txt_reg"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/kufam"
            android:hint="Confirm Password"
            app:boxStrokeColor="@color/white"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signup_btn_reg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/confirm_pass_ll_reg"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="Sign up"
        android:textSize="20sp"
        android:background="@color/logo_purple"
        />

    <LinearLayout
        android:id="@+id/line_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/signup_btn_reg"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="or"
            android:gravity="center"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line_reg"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp">

        <LinearLayout
            android:id="@+id/google_ll_reg"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_gravity="center"

            android:background="@drawable/round_social">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/google_big"
                android:padding="15dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="Continue With Google"
                android:textSize="12sp"
                android:gravity="center"
                android:paddingEnd="15dp"/>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/return_login_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/social_ll"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/logo_purple"
        android:textSize="15sp" />
</RelativeLayout>










