<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".activities.UserLoginPage">

    <LinearLayout
        android:id="@+id/app_name_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/thinkwell_ai_logo"
            android:contentDescription="@string/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/kufam"
            android:text="@string/thinkwell_ai"
            android:textColor="@color/logo_purple"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_ll"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/kufam"
        android:text="Get started with your Experience!"
        android:textColor="@color/logo_purple"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/email_ll_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_social"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="3dp"
        android:layout_below="@id/welcome_txt">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_txt_log"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/kufam"
            android:hint="Email"
            app:boxStrokeColor="@color/white"
            app:boxBackgroundMode="none"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pass_ll_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_social"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:layout_below="@id/email_ll_log">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_txt_log"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/kufam"
            android:hint="Password"
            app:boxStrokeColor="@color/white"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_pass_txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot password?"
        android:layout_below="@id/pass_ll_log"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:textSize="15sp"
        android:textColor="@color/logo_purple"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/forgot_pass_txt_login"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="Login"
        android:textSize="20sp"
        android:background="@color/logo_purple"
        />

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_btn_login"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="or continue with"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/black"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp">

        <LinearLayout
            android:id="@+id/google_ll_log"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/round_social">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/google_big"
                android:padding="15dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="Continue With Google"
                android:textSize="12sp"
                android:gravity="center"
                android:paddingEnd="15dp"/>



        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/return_reg_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/social_ll"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/don_t_have_account_sign_up"
        android:textColor="@color/logo_purple"
        android:textSize="15sp" />

</RelativeLayout>